/**
 * Copyright 2018 LinkedIn Corporation. All rights reserved. Licensed under the BSD-2 Clause license.
 * See LICENSE in the project root for license information.
 */
option java_package = "com.linkedin.tony.rpc.proto";
option java_outer_classname = "TonyCluster";

option java_generic_services = true;
import "yarn_tony_cluster_protos.proto";

service TonyClusterService {
    rpc getTaskInfos (GetTaskInfosRequestProto) returns (GetTaskInfosResponseProto);
    rpc getClusterSpec (GetClusterSpecRequestProto) returns (GetClusterSpecResponseProto);
    rpc registerWorkerSpec (RegisterWorkerSpecRequestProto) returns (RegisterWorkerSpecResponseProto);
    rpc registerTensorBoardUrl (RegisterTensorBoardUrlRequestProto) returns (RegisterTensorBoardUrlResponseProto);
    rpc registerExecutionResult(RegisterExecutionResultRequestProto) returns (RegisterExecutionResultResponseProto);
    rpc finishApplication (EmptyProto) returns (EmptyProto); // Signals a AM that it can exit now.
    rpc taskExecutorHeartbeat (HeartbeatRequestProto) returns (HeartbeatResponseProto); // To be used only by the Task Executor
    rpc registerCallbackInfo (RegisterCallbackInfoRequestProto) returns (EmptyProto);
}
